Correction of styling on services module

--- a/src/app/modules/services/av-room-design/av-room-design.component.html
+++ b/src/app/modules/services/av-room-design/av-room-design.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <main class="switcher wrapper">
     <div class="main">
-        <div class="decorative-image">
-
+        <div class="decorative-image center">
+            <img src="/assets/arch.avif" alt="" srcset="" class="p-3">
         </div>
 
         <div class="words">
@@ -25,67 +25,21 @@
         </div>
     </div>
 </main> 
-<h2 class="h2-offers text-center pb-9">   
-    We work with leading collaboration partners
-    </h2>
-<div class="partner-images pb-9">
-    <div class="container-p-img">
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-        <div class="center pt-7 pb-7">
-            <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
-        </div>
-    </div>
-</div>
-<div class="container-wrapper-p">
-    <div class="wrapper-design-p">
-        <h2 class="h2-offers text-center pb-9" style="color: white;">
-            Rapidly Deployable Meeting Room Solution for the Hybrid Workplace
-        </h2>
-        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
-            More hybrid work and meetings create greater meeting room demand. Our reference designs for collaboration spaces respond to this need. These templates specify the AV and UC technology for user-friendly spaces that can be quickly deployed on budget and on time.
-        </p>
-        <h3 class="design-h3">
-            Meeting equity
-        </h3>
-        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
-           Proscene's reference designs are built to provide an equitable, accessible, and positive experience for all participants – whether they are in the same room or working remotely. Whether your preferred UC and video meeting technology platform is Microsoft Teams, Cisco Webex, Zoom, Google Meet, or some combination, our designs are certified or compatible with all the leading cloud-enabled platforms.
-        </p>
-        <h3 class="design-h3">
-            End-user and IT benefits
-        </h3>
-        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
-            Using meeting room reference designs that follow collaboration technology standards also saves time for IT support staff and end users alike. When the same tools and applications are in all conference rooms, staff knows how to use the solutions in every space.
-        </p>
-        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
-            Help desk teams also limit the number of solutions they need to support. Other benefits include increased productivity, better employee experience and satisfaction, and higher video adoption rates.
-        </p>
+<div class="flex1-container">
+    <div class="flex1">
     
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers" style="padding-left: 0; margin-left: 0; color: white;">
+                Test room designs in real time
+with VR design services
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Design services help you envision, validate, and get feedback on room designs and technology integrations before you invest in and build them.</p>
+            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Accelerates the design process while building buy-in for the finished results. This service allows multiple stakeholders to be engaged in human-centric design thinking, including the often-overlooked end user.</p>
+                <a routerLink="/contact-us" class="demo-button">Contact us</a>
+        </div>
+        <div class="images images-back1">
+            <img src='https://images.unsplash.com/photo-1605647540924-852290f6b0d5?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHZyfGVufDB8fDB8fHww' alt="" srcset="">
+        </div>
     </div>
 </div>
 <h2 class="h2-offers text-center pb-9">
@@ -128,9 +82,35 @@
 <div class="container-wrapper-p">
     <div class="wrapper-design-p">
         <h2 class="h2-offers text-center pb-9" style="color: white;">
+            Rapidly Deployable Meeting Room Solution for the Hybrid Workplace
+        </h2>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="color: white;">
+            More hybrid work and meetings create greater meeting room demand. Our reference designs for collaboration spaces respond to this need. These templates specify the AV and UC technology for user-friendly spaces that can be quickly deployed on budget and on time.
+        </p>
+        <h3 class="design-h3">
+            Meeting equity
+        </h3>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="color: white;">
+           Proscene's reference designs are built to provide an equitable, accessible, and positive experience for all participants – whether they are in the same room or working remotely. Whether your preferred UC and video meeting technology platform is Microsoft Teams, Cisco Webex, Zoom, Google Meet, or some combination, our designs are certified or compatible with all the leading cloud-enabled platforms.
+        </p>
+        <h3 class="design-h3">
+            End-user and IT benefits
+        </h3>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="color: white;">
+            Using meeting room reference designs that follow collaboration technology standards also saves time for IT support staff and end users alike. When the same tools and applications are in all conference rooms, staff knows how to use the solutions in every space.
+        </p>
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="color: white;">
+            Help desk teams also limit the number of solutions they need to support. Other benefits include increased productivity, better employee experience and satisfaction, and higher video adoption rates.
+        </p>
+    
+    </div>
+</div>
+<div class="container-wrapper-p">
+    <div class="wrapper-design-p">
+        <h2 class="h2-offers text-center pb-9" style="color: white;">
             Accessibility and ADA standards
         </h2>
-        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="color: white;">
             When outfitting meeting rooms, integrating AV, and deploying UC applications, designs should follow the latest ADA Standards to ensure accessibility for all team members. Proscene's design and engineering teams can help you ensure everyone can use your collaboration spaces and tools. Top considerations include:
         </p>
         <ul>
@@ -143,7 +123,7 @@
         <h2 class="h2-offers text-center pb-9" style="color: white;">
             AV technology cybersecurity
         </h2>
-        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
+        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="color: white;">
            
 
 The growth of work-from-home teams, IoT technology, and the sheer volume of connected devices accelerates the need for advanced cybersecurity in AV solutions. Proscene teams can share their best practices for security, including safety measures for AV over IP networked AV solutions, to protect sensitive data.
@@ -184,6 +164,43 @@ The growth of work-from-home teams, IoT technology, and the sheer volume of conn
             <h4 class="card-design-h4 big-weight">
                 Reduction in total cost of ownership
                 </h4> 
+        </div>
+    </div>
+</div>
+<h2 class="h2-offers text-center pb-9">   
+    We work with leading collaboration partners
+    </h2>
+<div class="partner-images pb-9">
+    <div class="container-p-img">
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+        </div>
+        <div class="center pt-7 pb-7">
+            <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
         </div>
     </div>
 </div>
