--- a/src/app/modules/services/professional/professional.component.html
+++ b/src/app/modules/services/professional/professional.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <main class="switcher wrapper">
     <div class="main">
-        <div class="decorative-image">
-
+        <div class="decorative-image center">
+            <img src="/assets/event-s.avif" alt="" srcset="" class="p-3">
         </div>
 
         <div class="words">
@@ -22,58 +22,60 @@
         </div>
     </div>
 </main>
-<h2 class="h2-offers text-center pb-9">
-    Design and implementation services
-</h2>
-<div class="wrapper-professional-card pb-6">
-    <section class="professional-card">
-        <div class="professional-card-picture pimg1"></div>
-        <div class="professional-card-words">
-            <h3 class="pb-4">Design and planning</h3>
-            <p class="pb-4">Collaboration technology consulting, design, and implementation planning</p>
-            <a class="demo-button" routerLink="/contact-us">
-                Workplace learning
-            </a>
-        </div>
-    </section>
-    <section class="professional-card">
-        <div class="professional-card-picture pimg2"></div>
-        <div class="professional-card-words">
-            <h3 class="pb-4">Installation and integration</h3>
-            <p class="pb-4">Pre-implementation planning process through deployment</p>
-            <a class="demo-button" routerLink="/contact-us">
-                implementation support
-            </a>
-        </div>
-    </section>
-</div>
-<h2 class="h2-offers text-center pb-9">   
-Production services
-</h2>
-<div class="wrapper-professional-card pb-6">
-    <section class="professional-card">
-        <div class="professional-card-picture pimg3"></div>
-        <div class="professional-card-words">
-            <h3 class="pb-4">Enterprise video</h3>
-            <p class="pb-4">
-                Video production, company event production
-                and broadcast/streaming
-                </p>
-            <a class="demo-button" routerLink="/contact-us">
-                Video services
-            </a>
-        </div>
-    </section>
-    <section class="professional-card">
-        <div class="professional-card-picture pimg4"></div>
-        <div class="professional-card-words">
-            <h3 class="pb-4">Virtual event services</h3>
-            <p class="pb-4">Virtual event management for Cisco Webex, Microsoft teams and zoom</p>
-            <a class="demo-button" routerLink="/contact-us">
-                Virtual events
-            </a>
-        </div>
-    </section>
+<div class="back-blue">
+    <h2 class="h2-offers text-center pb-9" style="color: white;">
+        Design and implementation services
+    </h2>
+    <div class="wrapper-professional-card pb-6">
+        <section class="professional-card">
+            <div class="professional-card-picture pimg1"></div>
+            <div class="professional-card-words">
+                <h3 class="pc-title">Design and planning</h3>
+                <p class="pb-4">Collaboration technology consulting, design, and implementation planning</p>
+                <a class="demo-button" routerLink="/contact-us">
+                    Workplace learning
+                </a>
+            </div>
+        </section>
+        <section class="professional-card">
+            <div class="professional-card-picture pimg2"></div>
+            <div class="professional-card-words">
+                <h3 class="pc-title">Installation and integration</h3>
+                <p class="pb-4">Pre-implementation planning process through deployment</p>
+                <a class="demo-button" routerLink="/contact-us">
+                    implementation support
+                </a>
+            </div>
+        </section>
+    </div>
+    <h2 class="h2-offers text-center pb-9" style="color: white;">
+    Production services
+    </h2>
+    <div class="wrapper-professional-card pb-6">
+        <section class="professional-card">
+            <div class="professional-card-picture pimg3"></div>
+            <div class="professional-card-words">
+                <h3 class="pc-title">Enterprise video</h3>
+                <p class="pb-4">
+                    Video production, company event production
+                    and broadcast/streaming
+                    </p>
+                <a class="demo-button" routerLink="/contact-us">
+                    Video services
+                </a>
+            </div>
+        </section>
+        <section class="professional-card">
+            <div class="professional-card-picture pimg4"></div>
+            <div class="professional-card-words">
+                <h3 class="pc-title">Virtual event services</h3>
+                <p class="pb-4">Virtual event management for Cisco Webex, Microsoft teams and zoom</p>
+                <a class="demo-button" routerLink="/contact-us">
+                    Virtual events
+                </a>
+            </div>
+        </section>
+    </div>
 </div>
 <h2 class="h2-offers text-center pb-9">   
     We work with leading collaboration partners
