--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -28,6 +28,20 @@
                             <a routerLink="/government">Government projects</a>
                             <a routerLink="/law">Law firm technology</a>
                             <a routerLink="/religious">Religious Organisations</a>
+                            <a routerLink="/education">Education</a>
+                            <a routerLink="/unified-communications">Unified communications</a>
+                            <a routerLink="/meetings">Meeting solutions</a>
+                            <a routerLink="/digital-signage">Digital signage and video walls</a>
+                            <a routerLink="/government">Government projects</a>
+                            <a routerLink="/law">Law firm technology</a>
+                            <a routerLink="/religious">Religious Organisations</a>
+                            <a routerLink="/education">Education</a>
+                            <a routerLink="/unified-communications">Unified communications</a>
+                            <a routerLink="/meetings">Meeting solutions</a>
+                            <a routerLink="/digital-signage">Digital signage and video walls</a>
+                            <a routerLink="/government">Government projects</a>
+                            <a routerLink="/law">Law firm technology</a>
+                            <a routerLink="/religious">Religious Organisations</a>
                         </div>
                         <div class="card-nav p-2">
                             <a class="dropbtn chevron" (click)="toggleDropdown($event)">
