--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -8,7 +8,7 @@
                 <source src="/assets/back3.mp4" type="video/mp4">
         </video>
         <div class="container mx-auto px-2 margin-push">
-            <h1 class="background-video-h1 header-hero">Digitally empowering how we <span class="span">live</span>, learn and work .</h1>
+            <h1 class="background-video-h1 header-hero">Digitally empowering how we <span class="span">work</span>, learn and live .</h1>
             <h2 class="background-video-h2 header-p">We are Proscene, reshaping how people interact with the world. We
                 deliver outstanding audio and video experiences in any space. Our Audio and Video solutions enhance your
                 experiences whether you're working, learning, or at home..</h2>
