--- a/src/app/modules/services/support-countrywide/support-countrywide.component.html
+++ b/src/app/modules/services/support-countrywide/support-countrywide.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <main class="switcher wrapper">
     <div class="main">
-        <div class="decorative-image">
-
+        <div class="decorative-image center">
+            <img src="/assets/maintain.avif" alt="" srcset="" class="p-3">
         </div>
 
         <div class="words">
@@ -23,68 +23,70 @@
                     <li>Preventative maintenance contracts</li>
                     <li>Service level agreements</li>
                 </ul>
-                <a class="services-button">
+                <a class="demo-button">
                     explore Proscene's services
                 </a>
             </article>
         </div>
     </div>
 </main>
-<div class="flex1">
-
-    <div class="flex1-words flex1-words-p">
-        <h2 class="h2-offers" style="padding-left: 0; margin-left: 0;">
-
-            Introducing
-            Enterprise Maintenance
-
-        </h2>
-        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">One subscription. Fixed
-            pricing. Global AV/UC support.</p>
-        <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Scalable 24/7 global
-            technical support and maintenance for all of your audio-visual and unified collaboration spaces.</p>
-        <div class=" pt-6 pb-6">
-            <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">Explore Enterprise support</a>
+<div class="flex1-container">
+    <div class="flex1">
+    
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers" style="padding-left: 0; margin-left: 0; color: white;">
+                Introducing
+                Enterprise Maintenance
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">One subscription. Fixed
+                pricing. Global AV/UC support.</p>
+            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Scalable 24/7 global
+                technical support and maintenance for all of your audio-visual and unified collaboration spaces.</p>
+            <div class=" pt-6 pb-6">
+                <a routerLink="" class="demo-button">Explore Enterprise support</a>
+            </div>
+        </div>
+        <div class="images images-back1">
+            <img src="" alt="" srcset="">
         </div>
     </div>
-    <div class="images images-back1">
-        <img src="" alt="" srcset="">
+</div>
+<div class="grey-back">
+    <h2 class="h2-offers text-center">
+        Why choose Procene support?
+    </h2>
+    <div class="choose">
+        <div class="choose-card">
+            <h5 class="choose-card-header">95% customer</h5>
+            <p class="choose-card-p">satisfaction rating and clientscore</p>
+        </div>
+        <div class="choose-card">
+            <h5 class="choose-card-header">ITIL certified </h5>
+            <p class="choose-card-p">support team</p>
+        </div>
+        <div class="choose-card">
+            <h5 class="choose-card-header">24/7 support</h5>
+            <p class="choose-card-p">Around the country</p>
+        </div>
+        <div class="choose-card">
+            <h5 class="choose-card-header">on-site</h5>
+            <p class="choose-card-p">employees
+                support Fortune 500 companies</p>
+        </div>
     </div>
 </div>
-<h2 class="h2-offers text-center">
-    Why choose Procene support?
-</h2>
-<div class="choose">
-    <div class="choose-card">
-        <h5 class="choose-card-header">95% customer</h5>
-        <p class="choose-card-p">satisfaction rating and clientscore</p>
-    </div>
-    <div class="choose-card">
-        <h5 class="choose-card-header">ITIL certified </h5>
-        <p class="choose-card-p">support team</p>
-    </div>
-    <div class="choose-card">
-        <h5 class="choose-card-header">24/7 support</h5>
-        <p class="choose-card-p">Around the country</p>
-    </div>
-    <div class="choose-card">
-        <h5 class="choose-card-header">on-site</h5>
-        <p class="choose-card-p">employees
-            support Fortune 500 companies</p>
-    </div>
-</div>
-<h2 class="h2-offers">
+<h2 class="h2-offers" style="padding-top: 2rem;">
     24/7 support from countrywide remote support teams
 </h2>
 <div class="service-paragraphs">
-    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">We deliver live help desk support 24/7, every day.</p>
-    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">With distributed technicians around, we understand local intricacies and methods.</p>
+    <p class="pt-6  pb-3 width: 90%; padding-block" style="padding-left: 0;">We deliver live help desk support 24/7, every day.</p>
+    <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">With distributed technicians around, we understand local intricacies and methods.</p>
 </div>
 <h2 class="h2-offers">
     Enhanced support
 </h2>
 <div class="service-paragraphs">
-    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions " style="padding-left: 0;">Our Enhanced services give you an extra level of remote responsiveness and support with:</p>
+    <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Our Enhanced services give you an extra level of remote responsiveness and support with:</p>
     <ul>
         <li>Unlimited remote help desk support – available globally 24/7 every day</li>
         <li>Facilitation of manufacturer repair or replacement programs – let us navigate your warranty terms</li>
@@ -95,7 +97,7 @@
     Elite support
 </h2>
 <div class="service-paragraphs">
-    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions " style="padding-left: 0;">Our Elite services give you an extra level of onsite responsiveness and support with:</p>
+    <p class="pt-6  pb-6 width: 90%; padding-block " style="padding-left: 0;">Our Elite services give you an extra level of onsite responsiveness and support with:</p>
     <ul>
         <li>Software and firmware updates managed remotely for covered assets</li>
         <li>Facilitation of manufacturer repair or replacement programs – let us navigate your warranty terms</li>
@@ -107,7 +109,7 @@
     Enterprise maintenance
 </h2>
 <div class="service-paragraphs">
-    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions " style="padding-left: 0;">Our Enhanced services give you an extra level of remote responsiveness and support with:</p>
+    <p class="pt-6  pb-6 width: 90%; padding-block " style="padding-left: 0;">Our Enhanced services give you an extra level of remote responsiveness and support with:</p>
     <ul>
         <li>Automatic support for in-room technology changes</li>
         <li>Flexible subscription options for remote or on-site support</li>
